Enhance product creation and info update logic.