@@ -1,16 +1,13 @@
 package vn.edu.uit.msshop.product.product.domain.model;
 
-import org.jspecify.annotations.Nullable;
-
 import lombok.EqualsAndHashCode;
 import lombok.Getter;
-import lombok.experimental.FieldNameConstants;
+import vn.edu.uit.msshop.product.shared.domain.Domains;
 import vn.edu.uit.msshop.product.shared.domain.exception.DomainException;
 
 @Getter
 @EqualsAndHashCode(
         onlyExplicitlyIncluded = true)
-@FieldNameConstants
 // TODO: add status
 public final class Product {
     @EqualsAndHashCode.Include
@@ -18,7 +15,9 @@ public final class Product {
 
     private final ProductName name;
 
-    private final ProductImages images;
+    private final ProductCategoryId categoryId;
+
+    private final ProductBrandId brandId;
 
     private final ProductPriceRange priceRange;
 
@@ -26,47 +25,52 @@ public final class Product {
 
     private final ProductRating rating;
 
-    private final ProductCategoryId categoryId;
-
-    private final ProductBrandId brandId;
+    private final ProductOptions options;
 
     private final ProductVariants variants;
 
-    private final ProductOptions options;
+    private final ProductImageKeys imageKeys;
+
+    // ===== Metadata =====
+
+    private final ProductVersion version;
 
     public Product(
             ProductId id,
             ProductName name,
-            ProductImages images,
+            ProductCategoryId categoryId,
+            ProductBrandId brandId,
             ProductPriceRange priceRange,
             ProductSoldCount soldCount,
             ProductRating rating,
-            ProductCategoryId categoryId,
-            ProductBrandId brandId,
+            ProductOptions options,
             ProductVariants variants,
-            ProductOptions options) {
-        this.id = requireNonNull(id, "Product ID CANNOT be null");
-        this.name = requireNonNull(name, "Product name CANNOT be null");
-        this.images = requireNonNull(images, "Product images CANNOT be null");
-        this.priceRange = requireNonNull(priceRange, "Price range CANNOT be null");
-        this.soldCount = requireNonNull(soldCount, "Sold count CANNOT be null");
-        this.rating = requireNonNull(rating, "Rating CANNOT be null");
-        this.categoryId = requireNonNull(categoryId, "Category ID CANNOT be null");
-        this.brandId = requireNonNull(brandId, "Brand ID CANNOT be null");
-        this.variants = requireNonNull(variants, "Variants list CANNOT be null");
-        this.options = requireNonNull(options, "Options list CANNOT be null");
+            ProductImageKeys imageKeys,
+            ProductVersion version) {
+        this.id = Domains.requireNonNull(id, "Product ID CANNOT be null");
+        this.name = Domains.requireNonNull(name, "Product name CANNOT be null");
+        this.categoryId = Domains.requireNonNull(categoryId, "Category ID CANNOT be null");
+        this.brandId = Domains.requireNonNull(brandId, "Brand ID CANNOT be null");
+        this.priceRange = Domains.requireNonNull(priceRange, "Price range CANNOT be null");
+        this.soldCount = Domains.requireNonNull(soldCount, "Sold count CANNOT be null");
+        this.rating = Domains.requireNonNull(rating, "Rating CANNOT be null");
+        this.options = Domains.requireNonNull(options, "Options list CANNOT be null");
+        this.variants = Domains.requireNonNull(variants, "Variants list CANNOT be null");
+        this.imageKeys = Domains.requireNonNull(imageKeys, "Product image keys CANNOT be null");
+        this.version = Domains.requireNonNull(version, "Product version CANNOT be null");
 
         this.validateConsistencyBetweenOptionsAndVariants();
     }
 
     private void validateConsistencyBetweenOptionsAndVariants() {
         if (this.options.isEmpty()) {
-            if (this.variants.getCount() > 1) {
+            if (this.variants.size() > 1) {
                 throw new DomainException(
                         "Cross-Validation failed: Product with NO definition for options CANNOT hold more than 1 variant");
             }
 
-            if (!this.variants.isEmpty() && !this.variants.values().get(0).optionValues().isEmpty()) {
+            final var variantsList = this.variants.values();
+            if (!variantsList.isEmpty() && !variantsList.getFirst().traits().isEmpty()) {
                 throw new DomainException("Default variant must have empty option values");
             }
 
@@ -77,30 +81,17 @@ public final class Product {
             throw new DomainException("Product with configurable options MUST have at least one variant");
         }
 
-        final var expectedTierCount = this.options.getOptionCount();
+        final var expectedTierCount = this.options.size();
         for (final var variant : this.variants.values()) {
-            if (variant.optionValues().size() != expectedTierCount) {
+            if (variant.traits().size() != expectedTierCount) {
                 throw new DomainException(
                         String.format(
-                                "Cross-Validation failed: Variant '%s' provides %d option values, " +
-                                        "but Product defines %d option tiers",
-                                variant.variantId().value(),
-                                variant.optionValues().size(),
+                                "Cross-Validation failed: Variant '%s' provides %d traits, " +
+                                        "but Product defines %d options",
+                                variant.id().value(),
+                                variant.traits().size(),
                                 expectedTierCount));
             }
         }
-
-    }
-
-    private static <T> T requireNonNull(
-            @Nullable
-            T obj,
-
-            String message) {
-        if (obj == null) {
-            throw new DomainException(message);
-        }
-
-        return obj;
     }
 }
